--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="widith=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A Coding Quiz to Test Your Knowledge">
     <title>Coding Quiz 2.0</title>
     <link rel="stylesheet" href="assets/css/reset.css">
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 </head>
@@ -16,9 +19,18 @@
         <p>Time:</p>
     </div>
 
-    <div class="contain-md bg-primary quiz">
+    <div class="contain-md bg-primary quiz" id="start">
         <h1 class="center">
             Coding Quiz Challenge
         </h1>
+        <p class="instructions center">
+            This quiz will consist of 5 questions. You have one minute to finish the quiz. For every question you get wrong, you will be deducted 10 seconds so be careful!
+        </p>
+        <div class="center">
+            <button type="button" class="btn btn-dark btn-lg" id="start-button">Start</button>
+        </div>
     </div>
+
+    <div class="container" id="quizbox"></div>
+    <script src="assets/javascript/javascript.js"></script>
 </body>
