working on questions and displaying questions

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </div>
     </div>
 
-    <div class="container" id="quizbox"></div>
+    <div class="container" id="quizbox">
+        <div id="questions-area"></div>
+    </div>
     <script src="assets/javascript/javascript.js"></script>
 </body>
