now able to keep track of right and wrong answers

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
     </div>
 
+    <div class="container" id="scorebox">
+    </div>
+
     <div class="container" id="quizbox">
         <div id="questions-area"></div>
     </div>
