--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <button type="button" class="btn btn-dark btn-lg" id="view-highscore" onclick="highscoreView()">View Highscores</button>
-        <p>Time:</p>
+        <p>Time: <a id="timerEl"></a></p>
     </div>
 
     <div class="contain-md bg-primary quiz" id="start">
